--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Kirill Nagaitsev is a Ph.D. student at Northwestern University. His research interests mainly lie in operating system and compiler support for parallel computing"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico?" />
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico?v=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
