add (kir) to website description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Kirill Nagaitsev is a Ph.D. student at Northwestern University. His research interests mainly lie in operating system and compiler support for parallel computing"
+      content="Kirill (Kir) Nagaitsev is a Ph.D. student at Northwestern University. His research interests mainly lie in operating system and compiler support for parallel computing"
     />
     <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico?v=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
