--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Kirill (Kir) Nagaitsev is a Ph.D. student at Northwestern University. His research interests mainly lie in operating system and compiler support for parallel computing"
+      content="Varun is a Software Engineer at Mr. Cooper"
     />
     <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico?v=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Kirill Nagaitsev</title>
+    <title>Varun Rishwandh Sekar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
